# sdr-goldincision

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  stack.yml
.claude/: agente-00c-suggestions.md
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  rag_seed.py  seed.py
app/api/: admin.py  webhook.py
app/core/: contracts.py  debounce.py  fidelity.py  flow.py  hot_window.py  idempotency.py  intent.py  interpret.py  locks.py  memory.py  redis_keys.py  reset.py  responder.py  retrieval.py
app/integrations/: chatmaster.py  media.py  openai_client.py
app/observability/: log.py
app/repository/: mapper.py  models.py
app/schemas/: __init__.py  webhook.py
docs/: constitution.md  plano-concisao-rate-limit.md  plano-controle-fila.md  plano-controle-turnos.md  plano-correcao-jornada-c1.md  plano-interpretacao-agentica.md  plano-jornada-humanizada.md  plano-perfil-lead-anti-redundancia.md  prompt-feature-00c-8-pilares.md  prompt-feature-00c-fluidez-intencao.md
docs/01-briefing-discovery/: briefing.md
knowledge_base/documentos_agente/: Banco de Objeções Curso Harm Glútea 1.docx  Banco de Objeções Curso Harm Glútea 2.docx  Banco de Objeções Curso Harm Glútea 360º Bacelona.docx  Banco de Objeções Curso Harm Glútea on-line.docx  FAQ.docx  GoldIncision_Base_Conhecimento.docx  Harmonização Glútea 1.docx  Harmonização Glútea 2 São Paulo.docx  Harmonização Glútea On-line.docx  (+4 more)
migrations/: env.py
scripts/: build-push.sh
sdr_whatsapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_admin.py  test_admin_chunks.py  test_anti_pii_turno.py  test_audio.py  test_bootstrap.py  test_chatmaster.py  test_chunk_model.py  test_config.py  test_contracts.py  test_debounce_recovery.py  test_fase4_seguranca_observabilidade.py  test_fidelity.py  test_flow.py  test_flow_rag_integration.py  test_hot_window.py  test_idempotency_debounce_lock.py  test_integration_e2e.py  test_intent.py  test_interpret.py  test_lock_ttl.py  test_memory.py  test_migration_chunk.py  test_models_mapper.py  test_observability.py  test_openai_embed.py  test_overflow_resume.py  test_rag_cache.py  test_rag_seed.py  test_redis_keys.py  test_reengajamento.py  test_reset.py  test_responder.py  test_retrieval.py  test_seed.py  test_seed_idempotencia_ciclo.py  test_ssrf.py  test_troca_caminho_detector.py  test_troca_pendente_redis.py  test_turnos_contadores.py  (+1 more)
(+71 files in other folders)
